<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.freixas.gamma</groupId>
  <artifactId>gamma</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>Gamma</name>
  <description>A Minskowski spacetime diagram generator.</description>
  <!-- FIXME change it to the project's website -->
  <url></url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <skipTests>true</skipTests>
    <vmArgs>--module-path "C:\Program Files\JavaFX\lib" --add-modules javafx.controls,javafx.fxml,javafx.media,javafx.swing,javafx.web</vmArgs>
  </properties>

  <dependencies>
    <dependency>
	<groupId>org.openjfx</groupId>
	<artifactId>javafx-controls</artifactId>
	<version>17.0.2</version>
    </dependency>
    <dependency>
	<groupId>org.openjfx</groupId>
	<artifactId>javafx-fxml</artifactId>
	<version>17.0.2</version>
    </dependency>
    <dependency>
	<groupId>org.openjfx</groupId>
	<artifactId>javafx-media</artifactId>
	<version>17.0.2</version>
    </dependency>
    <dependency>
	<groupId>org.openjfx</groupId>
	<artifactId>javafx-swing</artifactId>
	<version>17.0.2</version>
    </dependency>
    <dependency>
	<groupId>org.openjfx</groupId>
	<artifactId>javafx-web</artifactId>
	<version>17.0.2</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.5.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <scm>
      <developerConnection>scm:git:file//D:/Users/tony/Documents/Java/gamma/.git</developerConnection>
  </scm>

  <build>
      <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
          <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.8.0</version>
                  <configuration>
                      <release>17</release>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-maven-plugin</artifactId>
                  <version>0.0.8</version>
                  <configuration>
                      <mainClass>org.freixas.gamma/org.freixas.gamma.Gamma</mainClass>
                      <runtimePathOption>MODULEPATH</runtimePathOption>
                  </configuration>
              </plugin>
              <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
              <plugin>
                  <artifactId>maven-clean-plugin</artifactId>
                  <version>3.1.0</version>
              </plugin>
              <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
              <plugin>
                  <artifactId>maven-resources-plugin</artifactId>
                  <version>3.0.2</version>
              </plugin>
              <plugin>
                  <artifactId>maven-jar-plugin</artifactId>
                  <version>3.0.2</version>
                  <configuration>
                      <archive>
                          <manifest>
                              <mainClass>org.freixas.gamma.Gamma</mainClass>
                          </manifest>
                      </archive>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-surefire-plugin</artifactId>
                  <version>2.12.4</version>
                  <configuration>
                      <skipTests>${skipTests}</skipTests>
                  </configuration>
              </plugin>
              <plugin>
                  <artifactId>maven-install-plugin</artifactId>
                  <version>2.5.2</version>
              </plugin>
              <plugin>
                  <artifactId>maven-deploy-plugin</artifactId>
                  <version>2.8.2</version>
              </plugin>
              <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
              <plugin>
                  <artifactId>maven-site-plugin</artifactId>
                  <version>3.7.1</version>
              </plugin>
              <plugin>
                  <artifactId>maven-project-info-reports-plugin</artifactId>
                  <version>3.0.0</version>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-release-plugin</artifactId>
                  <version>3.0.0-M5</version>
              </plugin>
          </plugins>
      </pluginManagement>
  </build>
</project>
